--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -202,3 +202,10 @@
   author={Gabry, Jonah and Goodrich, Ben},
   year={2016}
 }
+
+@book{lee2014bayesian,
+  title={Bayesian cognitive modeling: A practical course},
+  author={Lee, Michael D and Wagenmakers, Eric-Jan},
+  year={2014},
+  publisher={Cambridge university press}
+}
